--- a/SERRANO_FERNANDEZ_ALEJANDRO/p1/e5.tex
+++ b/SERRANO_FERNANDEZ_ALEJANDRO/p1/e5.tex
@@ -1,1 +1,3 @@
-Escriba aquí su respuesta al ejercicio 5.
+La estrategia a seguir para colocar las defensas es la siguiente. Una vez colocado el centro de extracción, las celdas más cercanas a su radio tienen un valor mayor, de tal manera que las defensas se colocarán alrededor de él.
+
+Para ello he declarado una variable valor inicializada a 255, que se decrementará en función de lo alejado que se encuentre la celda del centor de extracción, es decir, dependiendo del número de celdas a las que se aleje.
