--- a/SERRANO_FERNANDEZ_ALEJANDRO/p2/e1.tex
+++ b/SERRANO_FERNANDEZ_ALEJANDRO/p2/e1.tex
@@ -1,3 +1,3 @@
-$$ f(radio,rango,salud)=(radio+rango)-1+rango^2+3\frac{radio}{salud} $$
+$$ f(rango, dano)= \frac{rango}{dano} $$
 
-Escriba aquí su respuesta al ejercicio 1.
+Para asignar el valor de las defensas, he priorizado aquellas que más ratio rango/daño tienen.
