--- a/SERRANO_FERNANDEZ_ALEJANDRO/p2/e2.tex
+++ b/SERRANO_FERNANDEZ_ALEJANDRO/p2/e2.tex
@@ -1,1 +1,1 @@
-Escriba aquí su respuesta al ejercicio 2.
+Las estructuras necesarias para representar la tabla de subprocesos resueltos, han sido una matriz de tipo double con una tamaño máximo del numero de defesas(filas) * número de ases(columnas), y dos vectores, uno de tipo double donde almacenaremos los valores asiganados de las defensas, y otro de tipo int donde almacenaremos el coste de colocar cada defensa.
