--- a/SERRANO_FERNANDEZ_ALEJANDRO/p3/e1.tex
+++ b/SERRANO_FERNANDEZ_ALEJANDRO/p3/e1.tex
@@ -1,1 +1,1 @@
-Escriba aquí su respuesta al ejercicio 1.
+Para representar el terreno de batalla he hecho uso de un un struct, llamado Celda donde almacenaremos las posiciones de la fila y columna, junto con el valor determinado por la función defaultCellValue.
