--- a/SERRANO_FERNANDEZ_ALEJANDRO/p3/e1.tex
+++ b/SERRANO_FERNANDEZ_ALEJANDRO/p3/e1.tex
@@ -1,1 +1,2 @@
-Para representar el terreno de batalla he hecho uso de un un struct, llamado Celda donde almacenaremos las posiciones de la fila y columna, junto con el valor determinado por la función defaultCellValue.
+Para representar el terreno de batalla, primero he hecho uso de un un struct, llamado Celda donde almacenaremos las posiciones de la fila y columna, junto con el valor determinado por la función defaultCellValue.
+Estas celdas, serán posteriormente almacenadas en un vector de longitud N*M, siendo N el número de celdas a lo ancho y M el número de celdas a lo alto.
