--- a/SERRANO_FERNANDEZ_ALEJANDRO/p4/e2.tex
+++ b/SERRANO_FERNANDEZ_ALEJANDRO/p4/e2.tex
@@ -1,1 +1,121 @@
-Escriba aquí su respuesta al ejercicio 2.
+\begin{lstlisting}
+void DEF_LIB_EXPORTED calculateAdditionalCost(float** additionalCost
+                   , int cellsWidth, int cellsHeight, float mapWidth, float mapHeight
+                   , List<Object*> obstacles, List<Defense*> defenses) {
+
+    float cellWidth = mapWidth / cellsWidth;
+    float cellHeight = mapHeight / cellsHeight;
+    int celda_x, celda_y;
+    float valor,posicion;
+    
+    List<Defense*>::iterator currentDefense = defenses.begin();
+
+
+    for(int i = 0 ; i < cellsHeight ; ++i) {
+        for(int j = 0 ; j < cellsWidth ; ++j) {
+            
+            
+            Vector3 cellPosition = cellCenterToPosition(i, j, cellWidth, cellHeight);
+            float cost = 0;
+            auto it = defenses.begin();
+            it++;
+            
+            //Asignamos un mayor valor a aquellas posiciones que mas cerca esten de las defensas
+            for(it; it != defenses.end(); it++)
+	    {
+		celda_x = (((*it)->position.x - cellWidth/2) / cellWidth);
+		celda_y = (((*it)->position.y - cellHeight/2) / cellHeight);
+
+		posicion = abs(celda_x - i);
+		valor -= posicion;
+		posicion = abs(celda_y - j);
+		valor -= posicion;
+		cost = valor * 100;
+	    }
+             
+            additionalCost[i][j] = cost;
+        }
+    }    
+}
+
+
+
+void DEF_LIB_EXPORTED calculatePath(AStarNode* originNode, AStarNode* targetNode
+                   , int cellsWidth, int cellsHeight, float mapWidth, float mapHeight
+                   , float** additionalCost, std::list<Vector3> &path) {
+
+   
+//Lista de abiertos y cerrados
+std::vector<AStarNode*> abiertos,cerrado;
+AStarNode* current = originNode;
+bool encontrado = false;
+float d = 0.0f;
+
+targetNode->parent = NULL;
+current->G = 0;
+current->H = _sdistance(originNode->position, targetNode->position);
+current->F = originNode->G + originNode->H + additionalCost[(int)(originNode->position.y / cellsHeight)][(int)(originNode->position.x / cellsWidth)]; 
+
+abiertos.push_back(current);
+std::make_heap(abiertos.begin(),abiertos.end(),es_menor);   
+
+
+while(!encontrado && !abiertos.empty())
+{
+current = abiertos.front();        	
+std::pop_heap(abiertos.begin(),abiertos.end(),es_menor);
+abiertos.pop_back();    	
+
+cerrado.push_back(current);
+
+if(current == targetNode)
+	encontrado = true;
+
+else
+{
+	for(List<AStarNode*>::iterator j=current->adjacents.begin(); j != current->adjacents.end(); ++j)
+	{
+		std::vector<AStarNode*>::iterator it = std::find(cerrado.begin(),cerrado.end(),(*j));
+		
+		if(it == cerrado.end())
+		{
+			it = std::find(abiertos.begin(),abiertos.end(),(*j));
+			
+			if(it == abiertos.end())
+			{
+				(*j)->parent = current;
+				(*j)->G = current->G + _sdistance(current->position, (*j)->position);
+				(*j)->H = _sdistance(current->position, (*j)->position); 
+				(*j)->F = (*j)->G + (*j)->H + additionalCost[(int)((*j)->position.y / cellsHeight)][(int)((*j)->position.x / cellsWidth)];  
+				abiertos.push_back((*j)); 	
+				std::push_heap(abiertos.begin(),abiertos.end(),es_menor);			
+			}
+			else
+			{
+				d = _sdistance(current->position,(*j)->position);
+				
+				if((*j)->G > (current->G + d))
+				{
+					(*j)->parent = current;
+					(*j)->G = current->G + d;
+					(*j)->F = (*j)->G + (*j)->H + additionalCost[(int)((*j)->position.y / cellsHeight)][(int)((*j)->position.x / cellsWidth)];   	
+					std::make_heap(abiertos.begin(),abiertos.end(),es_menor);					   					
+				}    				
+			}
+		}  		
+	}    	
+}    
+}
+
+//Recueracion del camino
+current = targetNode;    
+path.push_front(targetNode->position);
+
+while(current->parent != originNode && targetNode->parent != NULL){
+	current = current->parent;
+	path.push_front(current->position);
+}
+
+}
+
+\end{lstlisting}
